--- a/app/src/main/res/layout/activity_costumer_map.xml
+++ b/app/src/main/res/layout/activity_costumer_map.xml
@@ -441,7 +441,7 @@ android:padding="10dp"
 
 </LinearLayout>
             <Button
-                android:id="@+id/request"
+                android:id="@+id/requests"
                 android:layout_width="match_parent"
                 android:layout_height="25dp"
                 android:layout_alignParentBottom="true"
@@ -463,20 +463,20 @@ android:padding="10dp"
 
 
             <Button
-                android:id="@+id/requestone"
+                android:id="@+id/request"
                 android:layout_width="match_parent"
                 android:layout_height="18dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
                 android:layout_gravity="bottom"
                 android:visibility="visible"
-                android:background="@drawable/bg_roundblack_modified"
+                android:background="@color/float_transparent"
                 android:paddingTop="1dp"
                 android:textSize="8dp"
                 android:layout_marginBottom="2dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:textColor="@color/white"
+                android:textColor="@color/blacko"
                 android:text="Book"
                />
 
