--- a/app/src/main/res/layout/customlayout.xml
+++ b/app/src/main/res/layout/customlayout.xml
@@ -1,54 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="240dp"
+    android:layout_width="300dp"
     android:layout_height="70dp"
-    android:padding="20dp"
+    android:paddingTop="12dp"
+    android:paddingBottom="20dp"
+    android:paddingLeft="2dp"
     android:orientation="vertical"
     android:background="@drawable/bg_marker">
+    <view
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp"
+        android:background="@color/white"></view>
 
     <LinearLayout
-        android:layout_alignParentRight="true"
-        android:layout_width="100dp"
+        android:layout_width="250dp"
         android:layout_height="100dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="0dp"
         android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/location"
-        android:layout_weight="1"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:paddingBottom="5dp"
-        android:layout_width="0dp"
-        android:text="cost"
-        android:textSize="10dp"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/location"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingBottom="5dp"
+            android:text="cost"
+            android:paddingStart="2dp"
+            android:paddingLeft="2dp"
+            android:paddingRight="2dp"
+            android:textColor="@color/white"
+            android:textSize="10dp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/population"
-        android:textColor="@color/white"
-        android:layout_width="0dp"
-        android:layout_weight="0.5"
-        android:paddingBottom="5dp"
-        android:text="time"
-        android:textSize="10dp"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/population"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:paddingLeft="2dp"
+            android:paddingRight="2dp"
+            android:textStyle="bold"
+            android:paddingBottom="5dp"
+            android:text="time"
+            android:textColor="@color/white"
+            android:textSize="10dp" />
     </LinearLayout>
 
     <View
         android:layout_width="5dp"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
+        android:layout_height="46dp"
         android:layout_centerVertical="true"
-        android:layout_marginStart="95dp"
+        android:layout_toEndOf="@+id/dp"
         android:background="@color/white"></View>
 
     <ImageView
         android:id="@+id/dp"
-        android:layout_width="70dp"
+        android:layout_width="40dp"
         android:layout_height="70dp"
         android:layout_alignParentStart="true"
 
 
+        android:layout_centerVertical="true"
         app:srcCompat="@mipmap/ic_default_user" />
 </RelativeLayout>
